--- a/themes/hipaper/_config.yml
+++ b/themes/hipaper/_config.yml
@@ -16,7 +16,7 @@ rss: /atom.xml
 keywords: ""
 
 # Put your favicon.ico into `hexo-site/themes/hipaper/source/` directory.
-favicon: css/images/favicon.ico
+favicon: false
 
 
 # Put your avatar.jpg into `hexo-site/themes/hipaper/source/` directory.
