--- a/themes/hipaper/_config.yml
+++ b/themes/hipaper/_config.yml
@@ -71,8 +71,8 @@ search:
 
 # comment ShortName, you can choose only ONE to display.
 duoshuo_shortname: 
-disqus_shortname: 
-livere_shortname: MTAyMC8yOTQ4MS82MDQ5
+disqus_shortname: https-ljlm0402-github-io
+livere_shortname: 
 uyan_uid: 
 wumii: 
 
@@ -99,7 +99,7 @@ google_analytics:
 gauges_analytics:
 baidu_analytics:
 tencent_analytics:
-busuanzi_analytics: true
+busuanzi_analytics:
 twitter:
 google_plus:
 fb_admins:
