- CONNECT WITH US 추가 -  새로운 페이지 포스팅 수정 (gitub actions 내용 추가)

--- a/themes/hipaper/_config.yml
+++ b/themes/hipaper/_config.yml
@@ -58,6 +58,7 @@ widgets:
 social:
   Github: https://github.com/ljlm0402
   Facebook: https://www.facebook.com/groups/765872100510405/
+  Profile: http://kyungmin-resume.surge.sh/
   Zeit: https://resume.ljlm0402.now.sh/
   Netlify: https://ljlm0402.netlify.com/
   StackShare: https://stackshare.io/kyungmin/tech-stack
